--- a/README.mkd
+++ b/README.mkd
@@ -13,6 +13,11 @@
 
 A custom terminal simulator with python.
 
-## Settings
+## Installation
 
-Be sure to add the cloned repo to your PATH on Windows, or if you're on Linux add something like `alias cforces='/usr/bin/python3 .../main.py'` in your preferred terminal configuration file.
+- `pip install keyboard`
+
+## Notes
+
+- Be sure to add the cloned repo to your PATH on Windows, or if you're on Linux add something like `alias cforces='/usr/bin/python3 .../main.py'` in your preferred terminal configuration file.
+- If you're using Avast Antivirus, add `*\a.exe` as an exception, so Avast won't scan it.
