--- a/README.mkd
+++ b/README.mkd
@@ -1,6 +1,6 @@
 # CForces
 
-```
+```txt
 ┌──────────────────────────────────────────────┐
 │      ____________                            │
 │     / ____/ ____/___  _____________  _____   │
@@ -13,13 +13,17 @@
 
 A custom terminal simulator with python.
 
-## Installation
+## Requirements
 
 - `pip install keyboard`
 
 ## Notes
 
-- Be sure to add the cloned repo to your PATH on Windows, or if you're on Linux add something like `alias cforces='/usr/bin/python3 .../main.py'` in your preferred terminal configuration file.
+- This directory should be included under PYTHONPATH, and invoked by `python -m cforces`. On Windows, create a batch file called `cforces.bat` and add
+	```batch
+	@echo off
+	python -m cforces
+	```
 - If you're using Avast Antivirus, add `*\a.exe` as an exception, so Avast won't scan it.
 
 ## To-do
